--- a/KIGA-NAKSO/css/KIGA-NAKSO.css
+++ b/KIGA-NAKSO/css/KIGA-NAKSO.css
@@ -1,8 +1,12 @@
+/*　import css　--------------------------*/
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');
+
 /*　body,html　--------------------------*/
 body, html {
-    padding: 0;
-    margin: 0;
-    height: 100%;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 /*コンテナについて　----------------------------*/
