[Fix] レシピの詳細が見れないバグの修正

--- a/KIGA-NAKSO/css/KIGA-NAKSO.css
+++ b/KIGA-NAKSO/css/KIGA-NAKSO.css
@@ -45,7 +45,7 @@ body, html {
 
 /* カードについて -------------------------------*/
 .card-body {
-  background-color: #AEFFBD;
+  background-color: #FFCC99;
 }
 
 #simple-card{
