--- a/KIGA-NAKSO/css/KIGA-NAKSO.css
+++ b/KIGA-NAKSO/css/KIGA-NAKSO.css
@@ -79,3 +79,19 @@ body, html {
 .s_f_button {
     width: 485px;
 }
+
+#sub_title {
+  position: relative;
+  padding: .25em 0 .5em .75em;
+  border-left: 6px solid #3498db;
+}
+
+#sub_title::after{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: '';
+    width: 100%;
+    height: 0;
+    border-bottom: 1px solid #ccc;
+}
